# triumsh

./: CMakeLists.txt
.github/workflows/: ci.yml
docs/: GRAMMAR.md
src/: cmdline.c  cmdline.h  command.c  command.h  context.h  cursor.h  cursor_test.c  error.h  eval.c  eval.h  eval_internal.h  exec.c  exec.h  exec_internal.h  exec_posix.c  exec_windows.c  file.h  main.c  strutil.h  utf8.h
test/: echo.trish  echo.trish.txt  echo.txt  env.trish  env.trish.txt  err-command-exit-not-0.trish  err-exp-space.trish  err-invalid-env.trish  err-invalid-escape.trish  err-no-redirect-target.trish  err-toplevel-space.trish  err-unclosed-double.trish  err-unclosed-env.trish  err-unclosed-exp-command.trish  err-unclosed-single.trish  escape.trish  escape.trish.txt  exp-cmdline.trish  exp-cmdline.trish.txt  pipe.trish  pipe.trish.txt  redirect.trish  simple.trish  test.bat  test.py
